<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        style="?android:attr/buttonBarStyle"
        >

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Ezequiel"
            />

        <Chronometer
            android:id="@+id/chrono"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:gravity="center"
            android:tag="0"
            />

        <Button
            android:id="@+id/reb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_reb"
            style="@style/PlayerViewFullButtons.Small"
            />

        <Button
            android:id="@+id/ast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_assists"
            style="@style/PlayerViewFullButtons.Small"
            />

        <Button
            android:id="@+id/rob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_steals"
            style="@style/PlayerViewFullButtons.Small"
            />

        <Button
            android:id="@+id/tap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_blocks"
            style="@style/PlayerViewFullButtons.Small"
            />

        <Button
            android:id="@+id/per"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_turnovers"
            style="@style/PlayerViewFullButtons.Small"
            />

        <Button
            android:id="@+id/fal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/full_view_fouls"
            style="@style/PlayerViewFullButtons.Small"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="?android:attr/buttonBarStyle"
        >
        
        <Button
            android:id="@+id/fgm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_fgm"
            style="@style/PlayerViewFullButtons"
            />
        
        <Button
            android:id="@+id/fga"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_fga"
            style="@style/PlayerViewFullButtons"
            />
        
        <Button
            android:id="@+id/tpm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_3pm"
            style="@style/PlayerViewFullButtons"
            />
        
        <Button
            android:id="@+id/tpa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_3pa"
            style="@style/PlayerViewFullButtons"
            />

        <Button
            android:id="@+id/ftm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_ftm"
            style="@style/PlayerViewFullButtons"
            />

        <Button
            android:id="@+id/fta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/full_view_fta"
            style="@style/PlayerViewFullButtons"
            />

    </LinearLayout>

</LinearLayout>